# -

./: .gitignore  BUILD_INSTRUCTIONS.md  IMPROVEMENT_RECOMMENDATIONS.md  INSTALLERS_OVERVIEW.md  INSTALLER_COMPARISON.md  INSTALLER_README.md  README.md  README_BUILD.md  StrodService.spec  USAGE_GUIDE.md  __init__.py  apiexternal_apis.py  apifuel_card_api.py  build_exe.py  compile_to_exe.bat  compile_to_exe.sh  compose.yml  console_installer.py  create_exe.bat  create_exe.sh  dev_requirements.txt  document_generator.py  gost_engine.py  installer_demo.py  interact_filestorage.py  main.py  nsis_example.nsi  pyproject.toml  pyvenv.cfg  requirements.txt  run_app.py  run_installers.sh  setup.py  setup_build.py  setup_installers.py  test_app.py  test_installers.py  webbackendapp.py  webbackendstaticswagger.json
Scripts/: activate  activate.bat  activate.fish
assets/: __init__.py
config/: settings_manager.py
data/: ksk.db
database/: __init__.py  backup_manager.py  base.py  init_db.py  ksk.db  populate_demo_db.py  session.py
desktop/: __init__.py  main_window.py  reports_window.py
docs/: api.md
filestorage/: README.md
frontend/src/: App.js  frontendsrcApp.js  frontendsrccomponentsAdminPanel.js  frontendsrccomponentsChat.js  frontendsrccomponentsFieldForm.js  frontendsrccomponentsLogin.js  frontendsrccomponentsNotifications.js  frontendsrccomponentsPushNotifications.js  frontendsrccontextsAuthContext.js  publicsw.js
integrations/: gpr_integration.py
models/: __init__.py  models.py
resources/: __init__.py
scripts/: init_db.py
services/: error_reporter.py  excel_exporter.py  excel_reports.py
src/: __init__.py
src/data/: ksk.db
src/kskapp/: __init__.py  backendapp.py  calc_engine.py  documentsupload_manager.py  field_data_form.py  filestorage_demo.py  main.py  use_filestorage.py
src/strodservice/: __init__.py  backendapp.py  build_exe.py  calc_engine.py  contractor_manager.py  crash_reporter.py  exceptions.py  (+8 more)
storage/: another_file_1.txt  file_index.json  project_document_1.txt
tests/: conftest.py
utils/: __init__.py  autostart.py  erp_integration.py  image_handler.py  logger.py  telegram_bot.py  websocket_logger.py
(+34 files in other folders)
